--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.106.3.94;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -203,6 +204,7 @@ allow 178.20.55.182;
 allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
+allow 178.218.144.99;
 allow 178.236.247.122;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -256,6 +258,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -675,7 +678,6 @@ allow 198.98.51.249;
 allow 198.98.53.136;
 allow 198.98.54.49;
 allow 198.98.60.90;
-allow 199.195.249.214;
 allow 199.195.250.165;
 allow 199.195.251.119;
 allow 199.195.251.78;
@@ -883,7 +885,6 @@ allow 23.129.64.212;
 allow 23.129.64.213;
 allow 23.129.64.214;
 allow 23.129.64.215;
-allow 23.129.64.216;
 allow 23.129.64.217;
 allow 23.129.64.218;
 allow 23.129.64.219;
@@ -904,6 +905,7 @@ allow 23.137.248.69;
 allow 23.137.249.143;
 allow 23.137.249.150;
 allow 23.137.249.185;
+allow 23.137.249.227;
 allow 23.137.249.8;
 allow 23.137.250.34;
 allow 23.137.250.83;
@@ -958,6 +960,7 @@ allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
+allow 2602:fc24:11:66c4::1;
 allow 2602:fc24:11:96f9::1;
 allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
@@ -1091,7 +1094,6 @@ allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
 allow 2620:18c:0:192::214;
 allow 2620:18c:0:192::215;
-allow 2620:18c:0:192::216;
 allow 2620:18c:0:192::217;
 allow 2620:18c:0:192::218;
 allow 2620:18c:0:192::219;
@@ -1261,6 +1263,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1508,6 +1511,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 3.225.239.93;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1520,7 +1524,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.219.79.23;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1649,7 +1652,6 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 5.39.25.229;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1685,7 +1687,6 @@ allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.198.213;
-allow 79.22.168.217;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
