--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -133,6 +133,7 @@ deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:4441::1;
+deny 2602:fc24:11:66c4::1;
 deny 2602:fc24:11:96f9::1;
 deny 2602:fc24:11:aabe::1;
 deny 2602:fc24:12:4870:39ca:318:0:1;
@@ -266,7 +267,6 @@ deny 2620:18c:0:192::212;
 deny 2620:18c:0:192::213;
 deny 2620:18c:0:192::214;
 deny 2620:18c:0:192::215;
-deny 2620:18c:0:192::216;
 deny 2620:18c:0:192::217;
 deny 2620:18c:0:192::218;
 deny 2620:18c:0:192::219;
@@ -435,6 +435,7 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
+deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
