--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -4,6 +4,7 @@ allow 102.219.85.85;
 allow 103.106.3.94;
 allow 103.109.101.105;
 allow 103.126.161.54;
+allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.174.253.222;
 allow 103.193.179.233;
@@ -12,6 +13,7 @@ allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.253.24.18;
+allow 103.28.52.93;
 allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
@@ -258,7 +260,6 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
-allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -548,7 +549,6 @@ allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 191.101.31.10;
-allow 191.252.92.147;
 allow 191.96.165.34;
 allow 192.210.255.181;
 allow 192.42.116.13;
@@ -885,6 +885,7 @@ allow 23.129.64.212;
 allow 23.129.64.213;
 allow 23.129.64.214;
 allow 23.129.64.215;
+allow 23.129.64.216;
 allow 23.129.64.217;
 allow 23.129.64.218;
 allow 23.129.64.219;
@@ -936,7 +937,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.184.48.127;
 allow 23.184.48.128;
 allow 23.94.211.25;
@@ -956,7 +956,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
@@ -1094,6 +1093,7 @@ allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
 allow 2620:18c:0:192::214;
 allow 2620:18c:0:192::215;
+allow 2620:18c:0:192::216;
 allow 2620:18c:0:192::217;
 allow 2620:18c:0:192::218;
 allow 2620:18c:0:192::219;
@@ -1263,7 +1263,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1511,7 +1510,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.225.239.93;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1626,9 +1624,9 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.207.188.233;
 allow 5.255.100.126;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
