--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -4,6 +4,7 @@ set_real_ip_from 102.219.85.85;
 set_real_ip_from 103.106.3.94;
 set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
+set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
@@ -12,6 +13,7 @@ set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.253.24.18;
+set_real_ip_from 103.28.52.93;
 set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
@@ -258,7 +260,6 @@ set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.141.147.128;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
-set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
@@ -548,7 +549,6 @@ set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 191.101.31.10;
-set_real_ip_from 191.252.92.147;
 set_real_ip_from 191.96.165.34;
 set_real_ip_from 192.210.255.181;
 set_real_ip_from 192.42.116.13;
@@ -885,6 +885,7 @@ set_real_ip_from 23.129.64.212;
 set_real_ip_from 23.129.64.213;
 set_real_ip_from 23.129.64.214;
 set_real_ip_from 23.129.64.215;
+set_real_ip_from 23.129.64.216;
 set_real_ip_from 23.129.64.217;
 set_real_ip_from 23.129.64.218;
 set_real_ip_from 23.129.64.219;
@@ -936,7 +937,6 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.127;
 set_real_ip_from 23.184.48.128;
 set_real_ip_from 23.94.211.25;
@@ -956,7 +956,6 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::1;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:11:26c3::1;
 set_real_ip_from 2602:fc24:11:4441::1;
@@ -1094,6 +1093,7 @@ set_real_ip_from 2620:18c:0:192::212;
 set_real_ip_from 2620:18c:0:192::213;
 set_real_ip_from 2620:18c:0:192::214;
 set_real_ip_from 2620:18c:0:192::215;
+set_real_ip_from 2620:18c:0:192::216;
 set_real_ip_from 2620:18c:0:192::217;
 set_real_ip_from 2620:18c:0:192::218;
 set_real_ip_from 2620:18c:0:192::219;
@@ -1263,7 +1263,6 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
-set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
@@ -1511,7 +1510,6 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.225.239.93;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1626,9 +1624,9 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.73.12;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 52.207.188.233;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
