Update lists at 20240402-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -64,6 +64,7 @@ allow 107.189.28.199;
 allow 107.189.29.103;
 allow 107.189.30.236;
 allow 107.189.30.69;
+allow 107.189.30.86;
 allow 107.189.3.11;
 allow 107.189.31.134;
 allow 107.189.31.225;
@@ -189,6 +190,7 @@ allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
+allow 178.170.37.11;
 allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -257,7 +259,6 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
-allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -866,7 +867,6 @@ allow 23.129.64.136;
 allow 23.129.64.137;
 allow 23.129.64.138;
 allow 23.129.64.139;
-allow 23.129.64.140;
 allow 23.129.64.141;
 allow 23.129.64.142;
 allow 23.129.64.143;
@@ -948,9 +948,9 @@ allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.43;
 allow 2.58.56.90;
-allow 2600:3c00:e000:4ee::3;
+allow 2600:3c00:e000:4ee::1;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::1;
+allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e6:0:6::;
@@ -1032,6 +1032,7 @@ allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
+allow 2605:6400:30:f414:42ce:c612:dab8:1337;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
 allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
@@ -1073,7 +1074,6 @@ allow 2620:18c:0:192::136;
 allow 2620:18c:0:192::137;
 allow 2620:18c:0:192::138;
 allow 2620:18c:0:192::139;
-allow 2620:18c:0:192::140;
 allow 2620:18c:0:192::141;
 allow 2620:18c:0:192::142;
 allow 2620:18c:0:192::143;
@@ -1121,6 +1121,7 @@ allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
+allow 2a00:c70:2017:1::169;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1248,6 +1249,7 @@ allow 2a05:b0c7:6b6c::1;
 allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
+allow 2a05:b0c7:6cd8::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1258,7 +1260,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1589,7 +1590,6 @@ allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
 allow 46.182.21.250;
-allow 46.195.127.150;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1647,6 +1647,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 54.146.120.38;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1658,7 +1659,6 @@ allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.84.90.171;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
@@ -1682,6 +1682,7 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
+allow 79.102.32.21;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1785,6 +1786,7 @@ allow 94.103.124.101;
 allow 94.103.124.104;
 allow 94.103.124.107;
 allow 94.103.124.121;
+allow 94.103.124.46;
 allow 94.103.124.90;
 allow 94.103.124.91;
 allow 94.103.124.98;
