--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -64,6 +64,7 @@ deny 107.189.28.199;
 deny 107.189.29.103;
 deny 107.189.30.236;
 deny 107.189.30.69;
+deny 107.189.30.86;
 deny 107.189.3.11;
 deny 107.189.31.134;
 deny 107.189.31.225;
@@ -189,6 +190,7 @@ deny 176.126.253.190;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.58.89.182;
+deny 178.170.37.11;
 deny 178.17.170.184;
 deny 178.17.170.23;
 deny 178.17.171.102;
@@ -257,7 +259,6 @@ deny 185.130.47.58;
 deny 185.141.147.128;
 deny 185.142.239.49;
 deny 185.146.232.234;
-deny 185.146.232.243;
 deny 185.14.97.37;
 deny 185.153.197.227;
 deny 185.154.110.142;
@@ -866,7 +867,6 @@ deny 23.129.64.136;
 deny 23.129.64.137;
 deny 23.129.64.138;
 deny 23.129.64.139;
-deny 23.129.64.140;
 deny 23.129.64.141;
 deny 23.129.64.142;
 deny 23.129.64.143;
@@ -948,9 +948,9 @@ deny 2.58.56.220;
 deny 2.58.56.248;
 deny 2.58.56.43;
 deny 2.58.56.90;
-deny 2600:3c00:e000:4ee::3;
+deny 2600:3c00:e000:4ee::1;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
-deny 2600:3c03:e000:fa::1;
+deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e6:0:6::;
@@ -1032,6 +1032,7 @@ deny 2605:6400:30:f174:cafe::;
 deny 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 deny 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 deny 2605:6400:30:f38b:28b3:cd24:51f3:e412;
+deny 2605:6400:30:f414:42ce:c612:dab8:1337;
 deny 2605:6400:30:f440:757e:adf1:55f7:5a31;
 deny 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 deny 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
@@ -1073,7 +1074,6 @@ deny 2620:18c:0:192::136;
 deny 2620:18c:0:192::137;
 deny 2620:18c:0:192::138;
 deny 2620:18c:0:192::139;
-deny 2620:18c:0:192::140;
 deny 2620:18c:0:192::141;
 deny 2620:18c:0:192::142;
 deny 2620:18c:0:192::143;
@@ -1121,6 +1121,7 @@ deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::d735;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
+deny 2a00:c70:2017:1::169;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1248,6 +1249,7 @@ deny 2a05:b0c7:6b6c::1;
 deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6c28::1;
+deny 2a05:b0c7:6cd8::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
@@ -1258,7 +1260,6 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
-deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
@@ -1589,7 +1590,6 @@ deny 45.95.169.255;
 deny 46.166.139.111;
 deny 46.182.21.248;
 deny 46.182.21.250;
-deny 46.195.127.150;
 deny 46.226.164.14;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1647,6 +1647,7 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.79.179;
 deny 5.2.79.190;
+deny 54.146.120.38;
 deny 54.224.79.94;
 deny 5.42.66.6;
 deny 5.42.80.232;
@@ -1658,7 +1659,6 @@ deny 54.36.108.162;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
-deny 54.84.90.171;
 deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
@@ -1682,6 +1682,7 @@ deny 77.91.85.147;
 deny 77.91.86.95;
 deny 77.91.87.79;
 deny 78.142.18.219;
+deny 79.102.32.21;
 deny 79.124.8.241;
 deny 79.137.198.213;
 deny 80.210.78.252;
@@ -1785,6 +1786,7 @@ deny 94.103.124.101;
 deny 94.103.124.104;
 deny 94.103.124.107;
 deny 94.103.124.121;
+deny 94.103.124.46;
 deny 94.103.124.90;
 deny 94.103.124.91;
 deny 94.103.124.98;
