--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -27,7 +28,6 @@ set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
 set_real_ip_from 104.244.73.193;
 set_real_ip_from 104.244.73.43;
-set_real_ip_from 104.244.74.23;
 set_real_ip_from 104.244.74.97;
 set_real_ip_from 104.244.75.74;
 set_real_ip_from 104.244.77.192;
@@ -108,6 +108,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.31.0.13;
@@ -804,6 +805,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -867,6 +869,7 @@ set_real_ip_from 23.129.64.136;
 set_real_ip_from 23.129.64.137;
 set_real_ip_from 23.129.64.138;
 set_real_ip_from 23.129.64.139;
+set_real_ip_from 23.129.64.140;
 set_real_ip_from 23.129.64.141;
 set_real_ip_from 23.129.64.142;
 set_real_ip_from 23.129.64.143;
@@ -1074,6 +1077,7 @@ set_real_ip_from 2620:18c:0:192::136;
 set_real_ip_from 2620:18c:0:192::137;
 set_real_ip_from 2620:18c:0:192::138;
 set_real_ip_from 2620:18c:0:192::139;
+set_real_ip_from 2620:18c:0:192::140;
 set_real_ip_from 2620:18c:0:192::141;
 set_real_ip_from 2620:18c:0:192::142;
 set_real_ip_from 2620:18c:0:192::143;
@@ -1645,9 +1649,9 @@ set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
+set_real_ip_from 52.71.35.205;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 54.146.120.38;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1734,6 +1738,7 @@ set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.109.226;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
+set_real_ip_from 89.147.110.200;
 set_real_ip_from 89.147.110.202;
 set_real_ip_from 89.147.110.214;
 set_real_ip_from 89.147.111.124;
