--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -117,6 +117,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -250,6 +251,7 @@ set_real_ip_from 2620:18c:0:192::136;
 set_real_ip_from 2620:18c:0:192::137;
 set_real_ip_from 2620:18c:0:192::138;
 set_real_ip_from 2620:18c:0:192::139;
+set_real_ip_from 2620:18c:0:192::140;
 set_real_ip_from 2620:18c:0:192::141;
 set_real_ip_from 2620:18c:0:192::142;
 set_real_ip_from 2620:18c:0:192::143;
