--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -28,6 +28,7 @@ allow 104.244.73.136;
 allow 104.244.73.190;
 allow 104.244.73.193;
 allow 104.244.73.43;
+allow 104.244.74.23;
 allow 104.244.74.97;
 allow 104.244.75.74;
 allow 104.244.77.192;
@@ -649,7 +650,6 @@ allow 194.163.157.49;
 allow 194.195.120.132;
 allow 194.26.192.64;
 allow 194.26.192.77;
-allow 194.28.112.157;
 allow 195.160.220.104;
 allow 195.176.3.19;
 allow 195.176.3.20;
@@ -937,6 +937,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.184.48.127;
 allow 23.184.48.128;
 allow 23.94.211.25;
@@ -956,6 +957,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
@@ -1611,7 +1613,6 @@ allow 51.195.91.124;
 allow 51.210.138.64;
 allow 51.222.142.67;
 allow 51.222.84.46;
-allow 5.135.174.211;
 allow 51.38.113.118;
 allow 51.38.81.135;
 allow 51.75.64.23;
@@ -1649,7 +1650,6 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
-allow 52.71.35.205;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 54.224.79.94;
@@ -1676,6 +1676,7 @@ allow 72.14.179.10;
 allow 72.167.47.69;
 allow 74.207.248.172;
 allow 74.82.47.194;
+allow 75.101.246.60;
 allow 77.105.146.42;
 allow 77.220.196.253;
 allow 77.232.143.248;
