--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -28,6 +28,7 @@ set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
 set_real_ip_from 104.244.73.193;
 set_real_ip_from 104.244.73.43;
+set_real_ip_from 104.244.74.23;
 set_real_ip_from 104.244.74.97;
 set_real_ip_from 104.244.75.74;
 set_real_ip_from 104.244.77.192;
@@ -649,7 +650,6 @@ set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.195.120.132;
 set_real_ip_from 194.26.192.64;
 set_real_ip_from 194.26.192.77;
-set_real_ip_from 194.28.112.157;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.19;
 set_real_ip_from 195.176.3.20;
@@ -937,6 +937,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.127;
 set_real_ip_from 23.184.48.128;
 set_real_ip_from 23.94.211.25;
@@ -956,6 +957,7 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:11:26c3::1;
 set_real_ip_from 2602:fc24:11:4441::1;
@@ -1611,7 +1613,6 @@ set_real_ip_from 51.195.91.124;
 set_real_ip_from 51.210.138.64;
 set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.222.84.46;
-set_real_ip_from 5.135.174.211;
 set_real_ip_from 51.38.113.118;
 set_real_ip_from 51.38.81.135;
 set_real_ip_from 51.75.64.23;
@@ -1649,7 +1650,6 @@ set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
-set_real_ip_from 52.71.35.205;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 54.224.79.94;
@@ -1676,6 +1676,7 @@ set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.167.47.69;
 set_real_ip_from 74.207.248.172;
 set_real_ip_from 74.82.47.194;
+set_real_ip_from 75.101.246.60;
 set_real_ip_from 77.105.146.42;
 set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.232.143.248;
