Update lists at 20240403-0000

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+deny 2001:1620:51a1:0:8aae:ddff:fe61:8ccc;
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
 deny 2001:1b60:3:220:3039:101:0:1;
@@ -118,7 +119,6 @@ deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
 deny 2001:b030:2422::7234;
-deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
@@ -135,6 +135,7 @@ deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:66c4::1;
 deny 2602:fc24:11:aabe::1;
 deny 2602:fc24:12:4870:39ca:318:0:1;
+deny 2602:fc24:12:759::1;
 deny 2602:fc24:12:77c0::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
@@ -653,7 +654,6 @@ deny 2a0f:df00:0:255::201;
 deny 2a0f:df00:0:255::202;
 deny 2a0f:df00:0:255::203;
 deny 2a0f:df00:0:255::204;
-deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
