--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -12,6 +12,7 @@ deny 103.208.86.5;
 deny 103.251.167.10;
 deny 103.251.167.20;
 deny 103.253.24.18;
+deny 103.28.52.93;
 deny 104.167.242.116;
 deny 104.167.242.117;
 deny 104.167.242.118;
@@ -64,7 +65,6 @@ deny 107.189.29.103;
 deny 107.189.30.236;
 deny 107.189.30.69;
 deny 107.189.30.86;
-deny 107.189.3.11;
 deny 107.189.31.134;
 deny 107.189.31.225;
 deny 107.189.31.232;
@@ -629,6 +629,7 @@ deny 193.189.100.204;
 deny 193.189.100.205;
 deny 193.189.100.206;
 deny 193.218.118.133;
+deny 193.218.118.181;
 deny 193.218.118.182;
 deny 193.218.118.188;
 deny 193.218.118.89;
@@ -935,6 +936,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
+deny 23.236.122.62;
 deny 23.94.211.25;
 deny 23.94.36.142;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1010,7 +1012,6 @@ deny 2605:6400:30:ed65:a5f1:548c:47c3:6185;
 deny 2605:6400:30:edc3::34;
 deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:ef95:daa6:bd3c:c413:da7e;
-deny 2605:6400:30:efb2::;
 deny 2605:6400:30:efba:dead::;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
 deny 2605:6400:30:f0ed:9151:66ed:6366:5c74;
@@ -1238,6 +1239,7 @@ deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6841::1;
+deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:696c::1;
 deny 2a05:b0c7:6978::1;
 deny 2a05:b0c7:6b6c::1;
@@ -1266,6 +1268,7 @@ deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
+deny 2a0a:3840:8078:23:0:504e:17e2:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1481,6 +1484,7 @@ deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
+deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
@@ -1516,6 +1520,7 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.254.131;
 deny 38.97.116.244;
+deny 45.12.3.80;
 deny 45.128.232.151;
 deny 45.130.20.250;
 deny 45.131.108.215;
@@ -1585,6 +1590,7 @@ deny 45.95.169.255;
 deny 46.166.139.111;
 deny 46.182.21.248;
 deny 46.182.21.250;
+deny 46.195.94.249;
 deny 46.226.164.14;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1640,7 +1646,6 @@ deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
-deny 52.70.19.164;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 54.224.79.94;
@@ -1654,6 +1659,7 @@ deny 54.36.108.162;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
+deny 54.89.16.198;
 deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
@@ -1679,17 +1685,18 @@ deny 77.91.85.147;
 deny 77.91.86.95;
 deny 77.91.87.79;
 deny 78.142.18.219;
-deny 79.102.32.21;
 deny 79.124.8.241;
 deny 79.137.198.213;
 deny 80.210.78.252;
 deny 80.241.60.207;
 deny 80.67.167.81;
 deny 80.67.172.162;
+deny 80.78.23.226;
 deny 80.82.78.14;
 deny 81.16.33.42;
 deny 81.17.28.95;
 deny 82.118.242.158;
+deny 82.153.138.120;
 deny 82.153.138.153;
 deny 82.153.138.182;
 deny 82.153.138.48;
@@ -1710,6 +1717,7 @@ deny 84.38.134.224;
 deny 84.38.134.225;
 deny 84.38.134.226;
 deny 84.38.134.227;
+deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
 deny 85.17.9.83;
