--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -189,6 +189,7 @@ deny 2605:6400:30:ed65:a5f1:548c:47c3:6185;
 deny 2605:6400:30:edc3::34;
 deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:ef95:daa6:bd3c:c413:da7e;
+deny 2605:6400:30:efb2::;
 deny 2605:6400:30:efba:dead::;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
 deny 2605:6400:30:f0ed:9151:66ed:6366:5c74;
@@ -220,7 +221,6 @@ deny 2605:6400:30:f753:891d:ee77:e97c:741a;
 deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 deny 2605:6400:30:f7ca::2;
-deny 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 deny 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 deny 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 deny 2605:6400:30:f858:2704:73e1:7085:12ef;
@@ -658,7 +658,6 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
-deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
