Update lists at 20240403-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.106.3.94;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
-allow 103.163.218.11;
 allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
@@ -16,7 +15,6 @@ allow 103.253.24.18;
 allow 103.28.52.93;
 allow 104.167.242.116;
 allow 104.167.242.117;
-allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.171.138;
 allow 104.192.3.74;
@@ -179,6 +177,7 @@ allow 171.25.193.80;
 allow 172.104.182.84;
 allow 172.104.214.41;
 allow 172.232.161.205;
+allow 172.232.55.54;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.131.84;
@@ -237,7 +236,6 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
-allow 185.10.16.41;
 allow 185.106.94.195;
 allow 185.107.70.56;
 allow 185.112.146.168;
@@ -245,7 +243,6 @@ allow 185.113.128.30;
 allow 185.126.117.21;
 allow 185.129.61.1;
 allow 185.129.61.10;
-allow 185.129.61.129;
 allow 185.129.61.2;
 allow 185.129.61.3;
 allow 185.129.61.4;
@@ -262,6 +259,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -792,7 +790,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
-allow 2001:67c:89c:666::1;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
@@ -819,7 +816,6 @@ allow 202.69.76.36;
 allow 202.94.246.210;
 allow 204.137.14.104;
 allow 204.137.14.105;
-allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.8.156.142;
@@ -852,6 +848,7 @@ allow 212.21.66.6;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
+allow 212.95.52.76;
 allow 213.156.142.30;
 allow 213.252.140.118;
 allow 213.95.149.22;
@@ -957,6 +954,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2600:3c07::f03c:94ff:fe12:513e;
 allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
@@ -970,7 +968,6 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
-allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:3:6106:2460::;
 allow 2603:3:6107:47a0::;
@@ -1262,6 +1259,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1523,6 +1521,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.193.254.249;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1651,7 +1650,6 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 54.145.2.105;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1835,3 +1833,4 @@ allow 95.211.244.28;
 allow 95.211.7.148;
 allow 96.27.198.133;
 allow 96.66.15.152;
+allow 98.128.173.33;
