--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -6,9 +6,7 @@ allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
-allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
-allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
@@ -21,7 +19,6 @@ allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:a:5c0::1;
-allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
@@ -105,7 +102,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
-allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
 allow 2001:67c:89c:702:1ce:1ce:babe:3;
 allow 2001:67c:89c:702:1ce:1ce:babe:4;
@@ -131,17 +127,14 @@ allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c07::f03c:94ff:fe12:513e;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
-allow 2602:fc24:11:66c4::1;
 allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fef9:100:1100::199;
@@ -186,7 +179,6 @@ allow 2605:6400:30:eb71:51b7:4869:7579:3aa1;
 allow 2605:6400:30:ebb6:532:acc:65:31;
 allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:ed65:a5f1:548c:47c3:6185;
-allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:ef95:daa6:bd3c:c413:da7e;
 allow 2605:6400:30:efb2::;
@@ -256,7 +248,6 @@ allow 2620:18c:0:192::145;
 allow 2620:18c:0:192::146;
 allow 2620:18c:0:192::147;
 allow 2620:18c:0:192::148;
-allow 2620:18c:0:192::149;
 allow 2620:18c:0:192::210;
 allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
@@ -271,7 +262,6 @@ allow 2620:18c:0:192::220;
 allow 2620:18c:0:192::221;
 allow 2620:18c:0:192::222;
 allow 2620:18c:0:192::223;
-allow 2620:18c:0:192::224;
 allow 2620:18c:0:192::225;
 allow 2620:18c:0:192::226;
 allow 2620:18c:0:192::227;
@@ -280,7 +270,6 @@ allow 2620:18c:0:192::229;
 allow 2620:59:a000:9666:216:3eff:fe7d:dae8;
 allow 2620:7:6001::120;
 allow 2620:95:4007::111;
-allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1f:1::55;
@@ -297,7 +286,6 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:cf2a::1;
-allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7a7:2:3c17:216:3cff:fe40:efc;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -354,7 +342,6 @@ allow 2a03:94e0:242c:dead::1;
 allow 2a03:94e0:243a:dead::1;
 allow 2a03:94e0:24a1:dead::1;
 allow 2a03:94e0:24d4::2;
-allow 2a03:94e0:24d4::3;
 allow 2a03:94e0:24d4::4;
 allow 2a03:94e0:24d4::5;
 allow 2a03:94e0:24d4::6;
@@ -404,7 +391,6 @@ allow 2a04:52c0:120:a13d::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
-allow 2a05:26c0:d1:12:acdc:feed:beef:66;
 allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -445,13 +431,11 @@ allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
-allow 2a0a:3840:8078:23:0:504e:17e2:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
-allow 2a0b:f4c0:16c:11::1;
 allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
@@ -559,12 +543,10 @@ allow 2a0b:f4c2:2::40;
 allow 2a0b:f4c2:2::41;
 allow 2a0b:f4c2:2::42;
 allow 2a0b:f4c2:2::43;
-allow 2a0b:f4c2:2::44;
 allow 2a0b:f4c2:2::45;
 allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
-allow 2a0b:f4c2:2::49;
 allow 2a0b:f4c2::25;
 allow 2a0b:f4c2:2::50;
 allow 2a0b:f4c2:2::51;
@@ -574,7 +556,6 @@ allow 2a0b:f4c2:2::54;
 allow 2a0b:f4c2:2::55;
 allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
-allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
@@ -654,11 +635,11 @@ allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
 allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
-allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
+allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -670,7 +651,6 @@ allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
-allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c826::2;
