Update lists at 20240404-2100

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -268,7 +268,6 @@ allow 2620:18c:0:192::218;
 allow 2620:18c:0:192::219;
 allow 2620:18c:0:192::220;
 allow 2620:18c:0:192::221;
-allow 2620:18c:0:192::222;
 allow 2620:18c:0:192::223;
 allow 2620:18c:0:192::224;
 allow 2620:18c:0:192::225;
@@ -422,6 +421,7 @@ allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
 allow 2a05:b0c7:6cd8::1;
 allow 2a05:f480:2400:1441:5400:4ff:fed7:686a;
+allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
