--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -268,7 +268,6 @@ deny 2620:18c:0:192::218;
 deny 2620:18c:0:192::219;
 deny 2620:18c:0:192::220;
 deny 2620:18c:0:192::221;
-deny 2620:18c:0:192::222;
 deny 2620:18c:0:192::223;
 deny 2620:18c:0:192::224;
 deny 2620:18c:0:192::225;
@@ -422,6 +421,7 @@ deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6c28::1;
 deny 2a05:b0c7:6cd8::1;
 deny 2a05:f480:2400:1441:5400:4ff:fed7:686a;
+deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
