--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -4,13 +4,15 @@ set_real_ip_from 102.219.85.85;
 set_real_ip_from 103.106.3.94;
 set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
+set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
+set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.253.24.18;
+set_real_ip_from 103.28.52.93;
 set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.192.1.138;
@@ -175,7 +177,6 @@ set_real_ip_from 172.232.161.205;
 set_real_ip_from 172.232.55.54;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
-set_real_ip_from 172.81.131.84;
 set_real_ip_from 173.232.195.137;
 set_real_ip_from 173.232.195.144;
 set_real_ip_from 173.232.195.146;
@@ -850,6 +851,7 @@ set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
 set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
+set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.146.2.41;
 set_real_ip_from 23.129.64.130;
@@ -884,7 +886,6 @@ set_real_ip_from 23.129.64.218;
 set_real_ip_from 23.129.64.219;
 set_real_ip_from 23.129.64.220;
 set_real_ip_from 23.129.64.221;
-set_real_ip_from 23.129.64.222;
 set_real_ip_from 23.129.64.223;
 set_real_ip_from 23.129.64.224;
 set_real_ip_from 23.129.64.225;
@@ -1083,7 +1084,6 @@ set_real_ip_from 2620:18c:0:192::218;
 set_real_ip_from 2620:18c:0:192::219;
 set_real_ip_from 2620:18c:0:192::220;
 set_real_ip_from 2620:18c:0:192::221;
-set_real_ip_from 2620:18c:0:192::222;
 set_real_ip_from 2620:18c:0:192::223;
 set_real_ip_from 2620:18c:0:192::224;
 set_real_ip_from 2620:18c:0:192::225;
@@ -1238,6 +1238,7 @@ set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6c28::1;
 set_real_ip_from 2a05:b0c7:6cd8::1;
 set_real_ip_from 2a05:f480:2400:1441:5400:4ff:fed7:686a;
+set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
 set_real_ip_from 2a06:1700:0:12::3;
@@ -1495,7 +1496,6 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.212.115.93;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
@@ -1509,6 +1509,7 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.219.77.134;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.130.20.250;
@@ -1672,6 +1673,7 @@ set_real_ip_from 77.105.146.42;
 set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.232.143.248;
 set_real_ip_from 77.48.28.193;
+set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 77.91.85.147;
@@ -1729,6 +1731,7 @@ set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.209.197.8;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 89.147.108.209;
+set_real_ip_from 89.147.108.56;
 set_real_ip_from 89.147.108.62;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.109.226;
@@ -1783,7 +1786,6 @@ set_real_ip_from 93.95.230.54;
 set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.99.104.128;
 set_real_ip_from 93.99.104.18;
-set_real_ip_from 93.99.104.194;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.103.124.101;
 set_real_ip_from 94.103.124.104;
