--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,9 +6,9 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
-allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.253.24.18;
@@ -47,6 +47,7 @@ allow 107.189.11.111;
 allow 107.189.1.160;
 allow 107.189.11.80;
 allow 107.189.12.3;
+allow 107.189.12.7;
 allow 107.189.13.251;
 allow 107.189.13.253;
 allow 107.189.13.254;
@@ -191,6 +192,7 @@ allow 176.58.121.177;
 allow 176.58.89.182;
 allow 178.170.37.11;
 allow 178.17.170.184;
+allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
@@ -249,7 +251,6 @@ allow 185.129.61.8;
 allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
-allow 185.130.44.108;
 allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.141.147.128;
@@ -260,6 +261,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
 allow 185.174.136.114;
@@ -886,6 +888,7 @@ allow 23.129.64.218;
 allow 23.129.64.219;
 allow 23.129.64.220;
 allow 23.129.64.221;
+allow 23.129.64.222;
 allow 23.129.64.223;
 allow 23.129.64.224;
 allow 23.129.64.225;
@@ -1084,6 +1087,7 @@ allow 2620:18c:0:192::218;
 allow 2620:18c:0:192::219;
 allow 2620:18c:0:192::220;
 allow 2620:18c:0:192::221;
+allow 2620:18c:0:192::222;
 allow 2620:18c:0:192::223;
 allow 2620:18c:0:192::224;
 allow 2620:18c:0:192::225;
@@ -1104,6 +1108,7 @@ allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
+allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
@@ -1118,7 +1123,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
-allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -1238,7 +1242,6 @@ allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
 allow 2a05:b0c7:6cd8::1;
 allow 2a05:f480:2400:1441:5400:4ff:fed7:686a;
-allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
@@ -1249,13 +1252,13 @@ allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
+allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
-allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:3840:8078:23:0:504e:17e2:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
@@ -1509,7 +1512,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.219.77.134;
+allow 44.216.155.251;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1619,7 +1622,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1662,7 +1664,6 @@ allow 64.176.66.193;
 allow 64.227.115.78;
 allow 64.5.123.66;
 allow 66.146.193.33;
-allow 66.220.242.222;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
@@ -1720,7 +1721,6 @@ allow 85.204.116.211;
 allow 85.204.116.88;
 allow 85.215.76.62;
 allow 85.93.218.204;
-allow 86.104.194.13;
 allow 87.118.110.27;
 allow 87.118.114.44;
 allow 87.118.116.103;
@@ -1786,6 +1786,7 @@ allow 93.95.230.54;
 allow 93.95.231.14;
 allow 93.99.104.128;
 allow 93.99.104.18;
+allow 93.99.104.194;
 allow 94.102.51.15;
 allow 94.103.124.101;
 allow 94.103.124.104;
@@ -1825,6 +1826,5 @@ allow 95.211.210.103;
 allow 95.211.244.28;
 allow 95.211.7.148;
 allow 96.27.198.133;
-allow 96.42.26.63;
 allow 96.66.15.152;
 allow 98.128.173.33;
