--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -268,6 +268,7 @@ allow 2620:18c:0:192::218;
 allow 2620:18c:0:192::219;
 allow 2620:18c:0:192::220;
 allow 2620:18c:0:192::221;
+allow 2620:18c:0:192::222;
 allow 2620:18c:0:192::223;
 allow 2620:18c:0:192::224;
 allow 2620:18c:0:192::225;
@@ -287,6 +288,7 @@ allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
+allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
@@ -301,7 +303,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
-allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -421,7 +422,6 @@ allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
 allow 2a05:b0c7:6cd8::1;
 allow 2a05:f480:2400:1441:5400:4ff:fed7:686a;
-allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
@@ -432,13 +432,13 @@ allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
+allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
-allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:3840:8078:23:0:504e:17e2:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
