Update lists at 20240405-0300

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -220,6 +220,7 @@ deny 2605:6400:30:f753:891d:ee77:e97c:741a;
 deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 deny 2605:6400:30:f7ca::2;
+deny 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 deny 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 deny 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 deny 2605:6400:30:f858:2704:73e1:7085:12ef;
@@ -422,6 +423,7 @@ deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6c28::1;
 deny 2a05:b0c7:6cd8::1;
 deny 2a05:f480:2400:1441:5400:4ff:fed7:686a;
+deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
@@ -439,6 +441,7 @@ deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
+deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a0a:3840:8078:23:0:504e:17e2:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
@@ -631,7 +634,6 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
-deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:470::30;
 deny 2a0e:d602:1:14bc::2;
