--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -9,6 +9,7 @@ deny 103.163.218.11;
 deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
+deny 103.208.86.5;
 deny 103.251.167.10;
 deny 103.251.167.20;
 deny 103.253.24.18;
@@ -45,6 +46,7 @@ deny 107.174.231.197;
 deny 107.189.10.175;
 deny 107.189.11.111;
 deny 107.189.1.160;
+deny 107.189.1.175;
 deny 107.189.11.80;
 deny 107.189.12.3;
 deny 107.189.12.7;
@@ -125,6 +127,7 @@ deny 143.110.156.176;
 deny 143.42.110.237;
 deny 143.42.199.223;
 deny 144.172.118.4;
+deny 144.172.118.55;
 deny 144.172.118.57;
 deny 144.172.73.11;
 deny 144.172.73.6;
@@ -251,6 +254,7 @@ deny 185.129.61.8;
 deny 185.129.61.9;
 deny 185.129.62.62;
 deny 185.129.62.63;
+deny 185.130.44.108;
 deny 185.130.44.43;
 deny 185.130.47.58;
 deny 185.141.147.128;
@@ -1039,6 +1043,7 @@ deny 2605:6400:30:f753:891d:ee77:e97c:741a;
 deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 deny 2605:6400:30:f7ca::2;
+deny 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 deny 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 deny 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 deny 2605:6400:30:f858:2704:73e1:7085:12ef;
@@ -1242,6 +1247,7 @@ deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6c28::1;
 deny 2a05:b0c7:6cd8::1;
 deny 2a05:f480:2400:1441:5400:4ff:fed7:686a;
+deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
@@ -1259,6 +1265,7 @@ deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
+deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a0a:3840:8078:23:0:504e:17e2:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
@@ -1451,7 +1458,6 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
-deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:470::30;
 deny 2a0e:d602:1:14bc::2;
@@ -1499,6 +1505,7 @@ deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.134;
+deny 3.216.2.142;
 deny 35.0.127.52;
 deny 35.240.241.135;
 deny 37.1.201.144;
@@ -1512,7 +1519,6 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.254.131;
 deny 38.97.116.244;
-deny 44.216.155.251;
 deny 45.12.3.80;
 deny 45.128.232.151;
 deny 45.130.20.250;
@@ -1622,6 +1628,7 @@ deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.126;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.190;
@@ -1764,7 +1771,6 @@ deny 91.208.75.178;
 deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
-deny 91.210.59.57;
 deny 91.219.236.101;
 deny 91.219.237.56;
 deny 91.219.239.166;
