--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -154,7 +153,6 @@ allow 162.247.74.201;
 allow 162.247.74.202;
 allow 162.247.74.204;
 allow 162.247.74.206;
-allow 162.247.74.213;
 allow 162.247.74.216;
 allow 162.247.74.217;
 allow 162.247.74.27;
@@ -181,7 +179,6 @@ allow 172.104.214.41;
 allow 172.232.161.205;
 allow 172.232.55.54;
 allow 172.81.131.139;
-allow 172.81.131.156;
 allow 173.232.195.137;
 allow 173.232.195.144;
 allow 173.232.195.146;
@@ -195,7 +192,6 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 178.170.37.11;
-allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -261,6 +257,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -886,7 +883,6 @@ allow 23.129.64.211;
 allow 23.129.64.212;
 allow 23.129.64.213;
 allow 23.129.64.214;
-allow 23.129.64.215;
 allow 23.129.64.216;
 allow 23.129.64.217;
 allow 23.129.64.218;
@@ -1088,7 +1084,6 @@ allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
 allow 2620:18c:0:192::214;
-allow 2620:18c:0:192::215;
 allow 2620:18c:0:192::216;
 allow 2620:18c:0:192::217;
 allow 2620:18c:0:192::218;
@@ -1110,6 +1105,7 @@ allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:d680::;
+allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -1117,7 +1113,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1133,6 +1128,8 @@ allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
 allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
+allow 2a02:2970:1001::4c;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
@@ -1258,6 +1255,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1516,6 +1514,7 @@ allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.63;
+allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
@@ -1593,6 +1592,8 @@ allow 45.95.169.229;
 allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.166.139.111;
+allow 46.182.21.248;
+allow 46.182.21.250;
 allow 46.195.91.44;
 allow 46.226.164.14;
 allow 46.232.251.191;
@@ -1625,6 +1626,7 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.23.96.207;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.26;
@@ -1662,7 +1664,6 @@ allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.87.116.232;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
@@ -1734,7 +1735,6 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
-allow 88.209.197.8;
 allow 88.80.20.86;
 allow 89.147.108.209;
 allow 89.147.108.56;
