--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -263,7 +263,6 @@ allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
 allow 2620:18c:0:192::214;
-allow 2620:18c:0:192::215;
 allow 2620:18c:0:192::216;
 allow 2620:18c:0:192::217;
 allow 2620:18c:0:192::218;
@@ -284,6 +283,7 @@ allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:d680::;
+allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -291,7 +291,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -307,6 +306,8 @@ allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
 allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
+allow 2a02:2970:1001::4c;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
@@ -432,6 +433,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
